# copernicus

./: .env.example  pyproject.toml
backend/: .env.example  hotwords.txt  pyproject.toml  run.py
backend/src/copernicus/: config.py  dependencies.py  exceptions.py  main.py
backend/src/copernicus/routers/: compliance.py  evaluation.py  task.py  transcription.py
backend/src/copernicus/schemas/: __init__.py  compliance.py  task.py  transcription.py  visual.py
backend/src/copernicus/services/: asr.py  audio.py  compliance.py  compliance_filters.py  corrector.py  evaluator.py  face_detector.py  hotword_replacer.py  llm.py  model_manager.py  ocr.py  persistence.py  pipeline.py  rule_registry.py  task_store.py  text_corrector.py
backend/src/copernicus/services/pipeline/: __init__.py  base.py  orchestrator.py
backend/src/copernicus/services/pipeline/stages/: __init__.py  asr_transcribe.py  audio_preprocess.py  face_detect.py  keyframe_extract.py  ocr_scan.py  speaker_smooth.py  text_correction.py  transcript_build.py  video_preprocess.py
backend/src/copernicus/utils/: llm_parse.py  request.py  text.py  types.py
backend/tests/: conftest.py  test_compliance.py  test_corrector.py  test_evaluator.py  test_text_utils.py  test_transcription_router.py
docs/: Optimization-Log.md  产说会检查规则.csv
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  compliance.ts  evaluation.ts  health.ts  task.ts  transcript.ts
frontend/src/hooks/: useAudioSync.ts  useAuditKeyboard.ts  useAutoScroll.ts  useExport.ts  (+2 more)
scripts/: download_models.py
src/copernicus/: config.py  dependencies.py  exceptions.py  main.py
tests/: conftest.py  test_corrector.py  test_evaluator.py  test_text_utils.py
(+65 files in other folders)
