[project]
name = "copernicus"
version = "0.1.0"
description = "ASR + NLP text correction service"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5",
    "funasr>=1.2",
    "modelscope>=1.18",
    "torch>=2.4",
    "torchaudio>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copernicus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
