[project]
name = "copernicus"
version = "0.1.0"
description = "ASR + NLP text correction service"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5",
    "funasr>=1.2",
    "modelscope>=1.18",
    "torch>=2.4",
    "torchaudio>=2.4",
    "httpx>=0.27",
    "scikit-learn>=1.5",
    "soundfile>=0.12",
    "pycorrector>=0.5",
    "transformers>=4.40",
    "openpyxl>=3.1",
    "flashtext>=2.7",
    "rapidocr>=3.6",
    "onnxruntime>=1.17",
    "ultralytics>=8.3",
    "opencv-python-headless>=4.9",
    "pypinyin>=0.51",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copernicus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
